[package]
name = "wrench"
version = "0.1.0"
edition = "2021"
description = "Rename files matching a regular expression by replacing parts of their name"
license = "Apache-2.0"
homepage = "https://github.com/funnyboy-roks/wrench"

[dependencies]
anyhow = "1.0.93"
chronos = "0.0.0"
clap = { version = "4.5.21", features = ["derive"] }
regex = "1.11.1"
